fixing issue on safari mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     padding: 5%;
     height: calc(100 * var(--vh));
-    max-height: -webkit-fill-available;
+    /*max-height: -webkit-fill-available;*/
     max-width: 100%;
     min-width: 98%;
 }
@@ -17,39 +17,4 @@
     font-size: 2rem;
     letter-spacing: 3px;
     text-align: center;
-}
-
-/* fix iOS bug not displaying 100vh correctly */
-/* ipad */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-	.page {
-		height: 768px;
-	}
-}
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-	.page {
-		height: 1024px;
-	}
-}
-/* iphone5 */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
-	.page {
-		height: 320px;
-	}
-}
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
-	.page {
-		height: 568px;
-	}
-}
-/* iPhone 4 */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
-	.page {
-		height: 320px;
-	}
-}
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
-	.page {
-		height: 480px;
-	}
 }
